--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -37,6 +38,9 @@
         <activity android:name=".MilkPage"/>
         <activity android:name=".CartPage"/>
         <activity android:name=".LoginPage"/>
+        <activity android:name=".CheckoutPage"/>
+        <activity android:name=".MapView"/>
+        <activity android:name=".SuccesNotif"/>
     </application>
 
 </manifest>
